# regen

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: regen.h
src/: main.c  regen.c
